envoy.yaml
static_resources:
   listeners:
   - address:
       socket_address:
         address: 0.0.0.0
         port_value: 80
     filter_chains:
     - filters:
       - name: envoy.http_connection_manager
         config:
           codec_type: auto
           stat_prefix: ingress_http
           route_config:
             name: local_route
             virtual_hosts:
             – name: local_service
               domains: ["*"]
               routes:
               – match: { prefix: "/" }
                 route: { cluster: target_taxgod }
           http_filters:
           – name: envoy.router
   – address:
       socket_address:
         address: 0.0.0.0
         port_value: 443
     filter_chains:
     - tls_context:
         common_tls_context:
           tls_certificates:
           – certificate_chain: { filename: "/opt/fullchain1.pem" }
             private_key: { filename: "/opt/privkey1.pem" }
       filters:
       - name: envoy.http_connection_manager
         config:
           stat_prefix: ingress_https
           route_config:
             virtual_hosts:
             - name: default
               domains: ["*"]
               routes:
               - match: { prefix: "/" }
                 route: { cluster: target_taxgod }
           http_filters:
           - name: envoy.router
   clusters:
   - name: target_taxgod
     connect_timeout: 0.25s
     type: strict_dns
     lb_policy: round_robin
     hosts:
     - socket_address:
         address: taxgod
         port_value: 3000
admin:
   access_log_path: "/tmp/envoy.log"
   address:
     socket_address:
       address: 0.0.0.0
       port_value: 9901
